--- a/UD_CursoAristiDEV/JetpackComposeInstagram/app/build.gradle
+++ b/UD_CursoAristiDEV/JetpackComposeInstagram/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -51,14 +53,32 @@ dependencies {
     implementation "androidx.compose.ui:ui:$compose_version"
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1' //Viewmodel
-    implementation "androidx.compose.runtime:runtime-livedata:$compose_version" //Lib añadida para usar el observeAsState
     implementation 'androidx.activity:activity-compose:1.3.1'
+    //Lib para usar la versión extended de los icons de android:
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
+    //Lib para ViewModel:
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    //Lib para livedata (observeAsState):
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    //Lib Coil (carga imágenes):
+    implementation 'io.coil-kt:coil-compose:1.3.2'
+    //Retrofit:
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0' //Recupera respuestas de retrofit y parsea a nuestro modelo de datos
+    //Extension para utilizar lo de inicializar por defecto el MutableLiveData en los ViewModels:
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0-alpha01'
+    //Lib DaggerHilt
+    implementation "com.google.dagger:hilt-android:2.41"
+    kapt "com.google.dagger:hilt-compiler:2.41"
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+}
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
