--- a/UD_CursoAristiDEV/JetpackComposeInstagram/app/src/main/AndroidManifest.xml
+++ b/UD_CursoAristiDEV/JetpackComposeInstagram/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.openwebinars.jetpackcompose.jetpackcomposeinstagram">
 
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,7 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.JetpackComposeInstagram"
+        android:name=".JetpackComposeInstagramApp"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
