--- a/UD_CursoAristiDEV/ToDoApp/app/build.gradle
+++ b/UD_CursoAristiDEV/ToDoApp/app/build.gradle
@@ -59,6 +59,10 @@ dependencies {
     //Lib DaggerHilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-compiler:2.41"
+    //Lib para ViewModel:
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    //Lib para livedata (observeAsState):
+    implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
