--- a/UD_CursoAristiDEV/ToDoApp/app/build.gradle
+++ b/UD_CursoAristiDEV/ToDoApp/app/build.gradle
@@ -7,12 +7,12 @@ plugins {
 
 android {
     namespace 'com.jetpackcompose.todoapp'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.jetpackcompose.todoapp"
         minSdk 24
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -51,7 +51,11 @@ android {
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    //Lib para ViewModel:
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    //Lib para livedata (observeAsState):
+    implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
+    //Libs Compose:
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
@@ -59,10 +63,11 @@ dependencies {
     //Lib DaggerHilt
     implementation "com.google.dagger:hilt-android:2.41"
     kapt "com.google.dagger:hilt-compiler:2.41"
-    //Lib para ViewModel:
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    //Lib para livedata (observeAsState):
-    implementation "androidx.compose.runtime:runtime-livedata:1.2.1"
+    //Libs Room
+    implementation("androidx.room:room-runtime:2.5.0")
+    kapt("androidx.room:room-compiler:2.5.0")
+    implementation("androidx.room:room-ktx:2.5.0")
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
